syntax = "proto3";

package v1.user;

option go_package = "github.com/yiaw/grpc-example/protos/v1/user";

service User {
    rpc SetUser(UserProto) returns (ResponseData);
    rpc GetUser(UserId) returns (UserProto);
    rpc ListUsers(None) returns (ListUsersResponse);
    rpc UpdateUser(UserProto) returns (ResponseData);
    rpc DeleteUser(UserId) returns (ResponseData);
}

message UserProto {
    string user_id = 1;
    string password= 2;
    string labelkey = 3;
    string labelvalue = 4;
    string password_expiretime = 5;
    int32  maxuser = 6;
    bool   locallogin = 7;
}

message None{}

message UserId {
    string user_id = 1;
}

message ResponseData {
    int32 response_code =1;
    string response_message =2;
}

message ListUsersResponse {
    repeated UserProto users = 1;
}